# LNL-Discoveries

./: LICENSE  README.md  buildSite.sh  install requirements.txt  justfile  mp3  pyproject.toml  requirements.txt  rssScrapeMD.py  rssScrapeMD2.py  rssScrapeMD3.py
LateNightLinuxMkDocs/: mkdocs.yml  mkdocs_theme.yml
LateNightLinuxMkDocs/docs/: extra.css  extra.js  index.md
LateNightLinuxMkDocs/docs/2022/: Late Night Linux – Episode 158.md  Late Night Linux – Episode 159.md  Late Night Linux – Episode 162.md  Late Night Linux – Episode 165.md  Late Night Linux – Episode 167.md  Late Night Linux – Episode 171.md  Late Night Linux – Episode 173.md  Late Night Linux – Episode 174.md  Late Night Linux – Episode 175.md  Late Night Linux – Episode 176.md  Late Night Linux – Episode 177.md  Late Night Linux – Episode 179.md  Late Night Linux – Episode 181.md  Late Night Linux – Episode 183.md  Late Night Linux – Episode 185.md  Late Night Linux – Episode 187.md  Late Night Linux – Episode 189.md  Late Night Linux – Episode 193.md  Late Night Linux – Episode 195.md  (+6 more)
LateNightLinuxMkDocs/site/: 404.html  index.html
LateNightLinuxMkDocsV2/: mkdocs.yml
LateNightLinuxMkDocsV2/docs/: extra.js  index.md
LateNightLinuxMkDocsV3/: mkdocs.yml
LateNightLinuxMkDocsV3/docs/: .pages
docs/: 404.html  extra.css  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  search.html  sitemap.xml
docs/search/: search_index.json
templates/: discoveriesTemplate.md.j2  indexTemplate.md.j2  rssLinkTemplate.md.j2
(+1462 files in other folders)
